Modular lab is ready!

--- a/labs/first-lab-modular/CMakeLists.txt
+++ b/labs/first-lab-modular/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE
     src/modules/database.cpp
     src/modules/repository.cpp
     src/modules/music_record.cpp
+    src/modules/tui.cpp
 )
 
 add_executable(app ${SOURCE})
